<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VideoMood</string>
    <string name="action_settings">Settings</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="refresh">Refresh</string>
    <string name="init_val" translatable="false">0.0</string>

    <string name="permission_dialog_title">Muse Needs Your Permission</string>
    <string name="permission_dialog_description">Muse needs a few permissions to work properly. On the next screens, tap "Allow" to proceed. If you deny, Muse will not work properly until you go into your Android settings and allow.</string>
    <string name="permission_dialog_understand">I Understand</string>

    <string name="title_activity_video" translatable="false">VideoActivity</string>
    <string name="title_activity_user">User data</string>
    <string name="age">Age</string>
    <string name="mood">Current mood</string>
    <string name="next">Next</string>
    <string name="done">Done</string>
    <string name="userDataHeader">Enter user info</string>
    <string name="museConnectHeader">Connect</string>
    <string name="back">Back</string>

    <string name="noDevicesFound">Not found</string>
    <string name="device">Device</string>

    <string name="noAgeRangeSelected">No age range selected</string>
    <string name="noMoodSelected">No mood selected</string>
    <string name="head_on">Put on</string>
    <string name="calmDownMessage">Breath deeply to calm down and continue watching</string>
    <string name="state_unknown">Unknown</string>
    <string name="state_connecting">Connecting</string>
    <string name="state_connected">Connected</string>
    <string name="state_disconnected">Disconnected</string>
    <string name="reconnect_header">Muse disconnected</string>
    <string name="reconnect_message">Muse is not available now. Want to try again?</string>
    <string name="reconnect">Reconnect</string>
    <string name="no">No</string>
    <string name="title_paired_devices">Paired devices</string>
    <string name="title_other_devices">Other devices</string>
    <string name="button_scan">Scan</string>
    <string name="none_paired">No devices paired</string>
    <string name="scanning">Scanning</string>
    <string name="select_device">Select device</string>
    <string name="none_found">No devices found</string>
    <string name="press_back_again_to_exit">Please click BACK again to exit</string>
    <string name="error">Error</string>
    <string name="error_no_videofiles">No suitable video files found. Application will quit</string>
    <string name="ok">Ok</string>
    <string name="error_no_permission">Application does not have permissions to play video</string>
    <string name="bluetooth_disabled_message">Bluetooth is disabled. Unable to work</string>

</resources>
