<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

	<LinearLayout
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:paddingBottom="@dimen/activity_vertical_margin"
		android:paddingLeft="@dimen/activity_horizontal_margin"
		android:paddingRight="@dimen/activity_horizontal_margin"
		android:paddingTop="@dimen/activity_vertical_margin">

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:text="@string/museConnectHeader"
			android:id="@+id/museConnectHeader"
			android:paddingBottom="10dp" />

		<TextView
			android:text="@string/device"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:labelFor="@+id/muses_spinner"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:id="@+id/musesSpinnerLabel" />

		<Spinner
			android:id="@+id/muses_spinner"
			android:layout_width="match_parent"
			android:layout_height="60dp"
			android:popupTheme="@android:style/Widget.Material.PopupMenu" />

		<Button
			android:id="@+id/refresh"
			android:layout_width="match_parent"
			android:layout_height="40dp"
			android:text="@string/refresh"
			android:onClick="refreshMusesList"
			android:layout_weight="1" />

		<Button
			android:layout_width="match_parent"
			android:layout_height="40dp"
			android:text="@string/next"
			android:id="@+id/next"
			android:onClick="goToUserData"
			android:layout_weight="1" />

	</LinearLayout>

</ScrollView>