<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ru.spbstu.videomood.activities.UserActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/userDataHeader"
        android:id="@+id/userDataHeader"
        android:paddingBottom="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/age"
        android:id="@+id/ageTextView" />

    <RadioGroup
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ageButtonsLayout">
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/mood"
        android:id="@+id/moodTextView" />

    <RadioGroup
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/moodButtonsLayout">

    </RadioGroup>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/validationMessage"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:textAlignment="viewStart"
        android:gravity="center_horizontal"
        android:visibility="invisible"
        style="@style/ValidationMessageStyle"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/done"
        android:id="@+id/done"
        android:onClick="goToVideo" />

</LinearLayout>
</ScrollView>